@@ -1,4 +1,4 @@
-// $Id: config.w32,v 1.3 2004/01/13 05:30:53 pollita Exp $
+// $Id: config.w32,v 1.3.4.1 2005/10/25 14:32:33 mike Exp $
 // vim:ft=javascript
 
 ARG_WITH("curl", "CURL support", "no");
@@ -12,6 +12,7 @@ if (PHP_CURL != "no") {
 			CHECK_LIB("winmm.lib", "curl", PHP_CURL)) {
 		EXTENSION("curl", "interface.c multi.c streams.c");
 		AC_DEFINE('HAVE_CURL', 1, 'Have CURL library');
+		AC_DEFINE('HAVE_CURL_SSL', 1, 'Have SSL suppurt in CURL');
 		// TODO: check for curl_version_info
 		// AC_DEFINE('PHP_CURL_URL_WRAPPERS', 0, 'Use curl for URL wrappers [experimental]');
 	} else {
